@@ -34,6 +34,7 @@ Cobbler CHANGELOG
 - (BUGF) properly "flatten" environment values for webapp
 - (BUGF) stop yumdownloader including system yum repos
 - (DOCS) update webui project page link
+- (BUGF) remove caching logic from remote.py
 
 - Tue Mar 3 2009 - 1.4.3
 - (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
